# django-tailwind-dashboard-template

./: .gitignore  LICENSE  README-cookiecutter.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
{{cookiecutter.project_slug}}/docs/: deployment.md
{{cookiecutter.project_slug}}/frontend/: package.json  tailwind.config.js
{{cookiecutter.project_slug}}/scripts/: deploy.sh
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/accounts/: CLAUDE.md  admin.py  forms.py  models.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/api/: README.md  authentication.py  permissions.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/api/tests/: test_api.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/core/: CLAUDE.md  admin.py  forms.py  turnstile.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/dashboard/: CLAUDE.md  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: CLAUDE.md  gunicorn.py  nginx.conf  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/systemd/: {{cookiecutter.project_slug}}-celery-beat.service  {{cookiecutter.project_slug}}-celery.service  {{cookiecutter.project_slug}}.service
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/: robots.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/css/: input.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/js/: api.js  main.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile.html  profile_edit.html  signup.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/components/: header.html  sidebar.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/core/: pagination.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/dashboard/: base.html  index.html
(+25 files in other folders)
